Add app of apps

--- a/envs/default/default.yaml
+++ b/envs/default/default.yaml
@@ -12,4 +12,11 @@ spec:
     directory:
       recurse: true
     path: envs/default
-    repoURL:
+    targetRevision: main
+    repoURL: https://github.com/mguay22/argocd-demo-2
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
