--- a/envs/aws/apps/nodejs-concepts.yaml
+++ b/envs/aws/apps/nodejs-concepts.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: nodejs-concepts
   namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: aws=mguay22/nodejs-concepts:latest
+    argocd-image-updater.argoproj.io/aws.update-strategy: digest
 spec:
   destination:
     namespace: nodejs-concepts
